Implemented greedy search and basic simulated annealing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(MaxHappyVerts)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(main main.cpp Graph.cpp Graph.h)
+add_executable(main main.cpp Graph.cpp Graph.h ConstructiveAlgs.cpp ConstructiveAlgs.h SimulatedAnnealing.cpp SimulatedAnnealing.h)
