Added multiple reduce strategies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,9 +225,9 @@ if (CPLEX_CP_FOUND AND NOT TARGET cplex-cp)
             INTERFACE_LINK_LIBRARIES "cplex-concert;${CPLEX_CP_EXTRA_LIBRARIES}")
 endif ()
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 20)
 
-add_executable(main src/main.cpp src/Graph.cpp src/Graph.h src/ConstructiveAlgs.cpp src/ConstructiveAlgs.h src/SimulatedAnnealing.cpp src/SimulatedAnnealing.h src/ExactSolver.cpp src/ExactSolver.h src/config.cpp src/config.h)
+add_executable(main src/main.cpp src/Graph.cpp src/Graph.h src/ConstructiveAlgs.cpp src/ConstructiveAlgs.h src/SimulatedAnnealing.cpp src/SimulatedAnnealing.h src/ExactSolver.cpp src/ExactSolver.h src/config.cpp src/config.h src/reduce.cpp src/reduce.h)
 target_link_libraries(main ilocplex)
 
 add_executable(generator generator/gen.cpp)
