Added the linear int distribution to cpp files and growth selector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,12 +227,14 @@ endif ()
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(main src/main.cpp src/Graph.cpp src/Graph.h src/ConstructiveAlgs.cpp src/ConstructiveAlgs.h src/SimulatedAnnealing.cpp src/SimulatedAnnealing.h src/ExactSolver.cpp src/ExactSolver.h src/config.cpp src/config.h src/reduce.cpp src/reduce.h)
+add_executable(main src/main.cpp src/Graph.cpp src/Graph.h src/ConstructiveAlgs.cpp src/ConstructiveAlgs.h src/SimulatedAnnealing.cpp src/SimulatedAnnealing.h src/ExactSolver.cpp src/ExactSolver.h src/config.cpp src/config.h src/reduce.cpp src/reduce.h src/linear_int_distribution.h)
 
 if (CPLEX_FOUND)
     target_link_libraries(main ilocplex)
     target_compile_definitions(main PUBLIC CPLEX_FOUND)
 endif()
+
+add_executable(distribution_test src/distribution_test.cpp src/linear_int_distribution.h)
 
 add_executable(generator generator/gen.cpp)
 
